# eau2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/: OptParser.hh  application.hpp  demo.hpp
demo/src/: OptParser.cc  demo.cpp  main.cpp
include/: chunk.hpp  column.hpp  column.tpp  dataframe.hpp  dataframe.tpp  fielder.hpp  row.hpp  schema.hpp
libeau2/: CMakeLists.txt
libeau2/database/: CMakeLists.txt
libeau2/database/include/: chunk.hpp  chunk.tpp  column.hpp  column.tpp  commondefs.hpp  dataframe.hpp  dataframe.tpp  fielder.hpp  key.hpp  kvstore.hpp  row.hpp  rower.hpp  schema.hpp  schema.tpp
libeau2/database/src/: dataframe.cpp  key.cpp  kvstore.cpp  row.cpp  schema.cpp
libeau2/include/: chunk.hpp  chunk.tpp  column.hpp  column.tpp  dataframe.hpp  dataframe.tpp  deserializer.hpp  fielder.hpp  get.hpp  key.hpp  kill.hpp  kvnet.hpp  kvstore.hpp  message.hpp  payload.hpp  put.hpp  reply.hpp  reply.tpp  row.hpp  rower.hpp  schema.hpp  schema.tpp  serial.hpp  serializer.hpp  serializer.tpp
libeau2/network/: CMakeLists.txt
libeau2/network/include/: kvnet.hpp  kvnetTcp.hpp  registrar.hpp  tcpUtils.hpp
libeau2/network/src/: kvnetTcp.cpp  registrar.cpp
libeau2/serial/: CMakeLists.txt
libeau2/serial/include/: ack.hpp  deserializer.hpp  directory.hpp  get.hpp  kill.hpp  message.hpp  nack.hpp  payload.hpp  payload.tpp  put.hpp  register.hpp  reply.hpp  reply.tpp  serial.hpp  serial.tpp  serializer.hpp  serializer.tpp  waitandget.hpp
libeau2/serial/src/: ack.cpp  directory.cpp  get.cpp  kill.cpp  message.cpp  nack.cpp  payload.cpp  put.cpp  register.cpp  reply.cpp  serializer.cpp  waitandget.cpp
libeau2/sorer/: CMakeLists.txt
libeau2/sorer/include/: linereader.h  object.h  sorparser.h  strslice.h
libeau2/sorer/src/: column.cpp  linereader.cpp  object.cpp  sorparser.cpp  strslice.cpp
libeau2/src/: dataframe.cpp  get.cpp  key.cpp  kvstore.cpp  message.cpp  payload.cpp  put.cpp  reply.cpp  row.cpp  schema.cpp  serializer.cpp
libeau2/tests/: CMakeLists.txt  column.test.hpp  column_int.test.hpp  dataframe.test.hpp  dataframe_fromColumnSet.test.hpp  kvstore.test.hpp  message.test.hpp  payload.test.hpp  row-fielder.test.hpp  schema.test.hpp  serial.test.hpp  serializer.test.hpp  test.cpp  testutils.hpp
libsorer/: CMakeLists.txt  README.md
libsorer/include/: object.h  parser.h
libsorer/include/sorer/: column.h  object.h  parser.h
libsorer/src/: column.cpp  object.cpp  parser.cpp
libsorer/tests/: CMakeLists.txt  parser.test.hpp  test.cpp
linus/: CMakeLists.txt
linus/include/: application.hpp  helper.hpp
linus/src/: application.cpp  main.cpp
report/: doc.md
src/: dataframe.cpp  row.cpp  schema.cpp
src/client/: client.cpp
src/server/: server.cpp
tests/: CMakeLists.txt  test.cpp  test_column.hpp
